# japm

./: Cargo.toml  LICENSE
modules/cli/: Cargo.toml
modules/cli/src/: main.rs
modules/cli/src/actions/: commands.rs
modules/cli/src/types/cli/: mod.rs  other.rs
modules/common/: Cargo.toml
modules/common/src/: lib.rs
modules/daemon/: Cargo.toml
modules/daemon/include/managers/: common.h
modules/daemon/include/managers/platform/: linux.h
modules/daemon/src/: lib.rs  main.rs
modules/daemon/src/database/: duckdb.rs
modules/daemon/src/managers/: daemon_supervisor.rs  mod.rs
modules/daemon/src/managers/linux/: standard.rs
modules/daemon/src/managers/macos/: standard.rs
modules/daemon/src/types/: child.rs  database.rs  manager.rs  mod.rs
src/: main.rs
src/actions/: commands.rs
src/types/cli/: subcommands.rs
