[package]
name = "japm"
description = "Just another process manager."
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "modules/cli",
    "modules/common",
    "modules/daemon",
]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
chrono = "0.4.42"
clap = "4.5.47"
daemonize = "0.5.0"
duckdb = "1.4.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "time", "macros", "net", "process", "io-util"] }
japm_daemon = { path = "modules/daemon" }

[[bin]]
name = "japm-daemon"
path = "modules/daemon/src/main.rs"

[[bin]]
name = "japm"
path = "modules/cli/src/main.rs"
