[package]
name = "japm_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
japm_common = { path = "../common" }
japm_daemon = { path = "../daemon" }
serde_json = "1.0.143"
tokio = {version = "1.47.1", features = ["full"]}
