[package]
name = "japm_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1.45.1", features = ["full", "signal"] }
japm_daemon = { path = "../daemon" }
japm_common = { path = "../common" }
clap_complete = "4.5.58"
serde_json = "1.0.145"
chrono = "0.4.42"
