[package]
name = "japm_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
japm_common = { path = "../common" }
anyhow = "1.0.99"
cfg-if = "1.0.3"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "time", "macros", "net", "process", "io-util"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uds = { version = "0.4.2", features = ["tokio"] }
chrono = "0.4.42"
duckdb = { version = "1.3.2", features = ["bundled"] }
daemonize = "0.5.0"
cxx = "1.0.192"
